--- a/css/_header.scss
+++ b/css/_header.scss
@@ -55,6 +55,11 @@ nav{
           }
      .banner{
          max-height:70rem;
+         .row
+       .col-sm-8
+                img
+       .col-sm-4
+                img{padding-left:2px}
      }     
    .secondary-header{
        background-color: $secondary;
